Create 100GB file itself
Signed-off-by: Ashish Singh <ssashish@amazon.com>